--- a/public/stylesheets/pages.css
+++ b/public/stylesheets/pages.css
@@ -1089,8 +1089,55 @@ h3.timeline-title {
    Accounts
  =============*/
 .login {
-  background-image: url('/images/login.jpg');  
+  
+} 
+#visual {
+  position: relative;
+  height: 400px;
+  text-align: center;
+  overflow: hidden;
+}
+
+#video-bg, #visual-content {
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  width: 100%;
+}
+
+#video-bg {
+  height: 100%;
+  background: #000; /* 배경 이미지로 대체 가능 */
   background-size: cover;
+  z-index: -100;
+}
+
+#video-bg iframe {
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+
+#visual-content {
+  z-index: 100;
+}
+
+h1 {
+  font-size: 42px;
+  font-weight: normal;
+    color: #fff;
+  margin-bottom: 60px;
+}
+
+#visual-btn {
+  color: #fff;
+  font-size: 20px;
+  border: 2px solid #fff;
+  padding: 12px 24px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .wrapper-page {
