--- a/views/med.ejs
+++ b/views/med.ejs
@@ -88,8 +88,8 @@
                                             
                                         <form action="/med" method="post" class="form-inline">
                                                     
-                                             <input type="text" name="query" class="form-control" placeholder="Search" style="width:90%;background-color:white; line-height:40px;height:40px;">
-                                             <button type="submit"><i class="fa fa-search"></i></button>
+                                             <input type="text" name="query" class="form-control" placeholder="Search" style="width:90%;background-color:white; line-height:40px;height:45px;">
+                                             <button class="btn btn-icon waves-effect waves-light btn-purple m-b-5" type="submit"> <i class="fa fa-search"></i> </button>
                                                         
                                         </form>
                                     </div>            
