--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -121,7 +121,7 @@
                                 <a href="#"><i class="md md-color-lens"></i>프로젝트</a>
                                 <ul class="submenu">
                                     <li><a href="/med">목록보기</a></li>
-                                    <li><a href="#">등록하기</a></li>
+                                    <li><a href="/med/new">등록하기</a></li>
                                 </ul>
                             </li>
                             <li class="has-submenu">
