--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,11 +4,13 @@
       overflow-y:hidden;
       height:100%;
     }
+   
+   
     </style>
 </head>
 
      <body class="login">
-        <% include navbar2%>
+        
         <div class="wrapper-page">
            
             <div class="text-center">
@@ -19,14 +21,14 @@
 
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Username" name="id">
+                        <input class="form-control" type="text" required="" placeholder="Username">
                         <i class="md md-account-circle form-control-feedback l-h-34"></i>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Password" name="password">
+                        <input class="form-control" type="password" required="" placeholder="Password">
                         <i class="md md-vpn-key form-control-feedback l-h-34"></i>
                     </div>
                 </div>
