--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -8,7 +8,6 @@
 </head>
 
     <body class="login">
-        <% include navbar2%>
 
         <div class="wrapper-page">
 
@@ -19,24 +18,35 @@
             <form class="form-horizontal m-t-20" action="index.html">
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="email" required="" placeholder="Email">
+                        <input class="form-control" type="text" required="" placeholder="아이디 입력" name="id">
+                        <i class="md md-account-circle form-control-feedback l-h-34"></i>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <div class="col-xs-12">
+                        <input class="form-control" type="password" required="" placeholder="Password" name="password">
+                        <i class="md md-vpn-key form-control-feedback l-h-34"></i>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <div class="col-xs-12">
+                        <input class="form-control" type="email" required="" placeholder="Email" name="email">
                         <i class="md md-email form-control-feedback l-h-34"></i>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Username">
+                        <input class="form-control" type="text" required="" placeholder="이용자이름" name="name">
                         <i class="md md-account-circle form-control-feedback l-h-34"></i>
                     </div>
                 </div>
+                
+               
 
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Password">
-                        <i class="md md-vpn-key form-control-feedback l-h-34"></i>
-                    </div>
-                </div>
+               
 
                 <div class="form-group">
                     <div class="col-xs-12">
