--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,8 @@
 
      <body class="login">
         
+        <video src="/images/login.mp4"></video>
+        
         <div class="wrapper-page">
            
             <div class="text-center">
@@ -21,14 +23,14 @@
 
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Username">
+                        <input class="form-control" type="text" required="" placeholder="userid" name="id">
                         <i class="md md-account-circle form-control-feedback l-h-34"></i>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Password">
+                        <input class="form-control" type="password" required="" placeholder="Password" name="password">
                         <i class="md md-vpn-key form-control-feedback l-h-34"></i>
                     </div>
                 </div>
@@ -36,7 +38,7 @@
                 <div class="form-group">
                     <div class="col-xs-12">
                         <div class="checkbox checkbox-primary">
-                            <input id="checkbox-signup" type="checkbox">
+                            <input id="checkbox-signup" type="checkbox" name="signup">
                             <label for="checkbox-signup" style="color: MintCream">
                                 Remember me
                             </label>
