저는 자러갑니다~

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,14 +4,27 @@
       overflow-y:hidden;
       height:100%;
     }
-   
-   
+    
+    #video { 
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      z-index: -1;
+      overflow: hidden;
+    }
+
     </style>
 </head>
 
      <body class="login">
         
-        <video src="/images/login.mp4"></video>
+        <video src="/images/login.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
+        
+        </video>
         
         <div class="wrapper-page">
            
