--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -19,7 +19,7 @@
                 <div class="form-group">
                     <div class="col-xs-12">
                         <input class="form-control" type="text" required="" placeholder="아이디 입력" name="id">
-                        <i class="md md-account-circle form-control-feedback l-h-34"></i>
+                        <i class="md md-perm-identity form-control-feedback l-h-34"></i>
                     </div>
                 </div>
                 
@@ -39,7 +39,7 @@
 
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="이용자이름" name="name">
+                        <input class="form-control" type="text" required="" placeholder="이용자이름" name="nam">
                         <i class="md md-account-circle form-control-feedback l-h-34"></i>
                     </div>
                 </div>
