css장인 pg님의 작품

--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -23,7 +23,8 @@ body {
   overflow-x: hidden !important;
 }
 .body-login{
- 
+  background-image: url("/public/images/login-image.jpg");
+  background-size: cover;
 }
 html {
   overflow-x: hidden;
