오늘의 마지막 푸쉬

--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -4,11 +4,24 @@
       overflow-y:hidden;
       height:100%;
     }
+     #video { 
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+     
+      overflow: hidden;
+    }
+
     </style>
 </head>
 
     <body class="login">
-
+ <video src="/images/login2.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
+ </video>
         <div class="wrapper-page">
 
             <div class="text-center">
