--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,11 +22,11 @@
 
      <body class="login">
         
-        <video src="/images/login.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
-        
+        <video src="/images/login2.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
         </video>
         
         <div class="wrapper-page">
+        
            
             <div class="text-center">
                 <a href="/" class="logo logo-lg"><span style="color: MintCream">데이터 대리</span> </a>
