--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,14 +30,18 @@
            
             <div class="text-center">
                 <a href="/" class="logo logo-lg"><span style="color: MintCream">데이터 대리</span> </a>
+            
+                         
             </div>
-
+            
             <form class="form-horizontal m-t-20" action="/login" method="post">
 
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="userid" name="id">
+                        
+                        <input class="form-control" type="text" required="" placeholder="userid" name="uid">
                         <i class="md md-account-circle form-control-feedback l-h-34"></i>
+                        
                     </div>
                 </div>
 
@@ -48,7 +52,7 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                <!--div class="form-group">
                     <div class="col-xs-12">
                         <div class="checkbox checkbox-primary">
                             <input id="checkbox-signup" type="checkbox" name="signup">
@@ -58,7 +62,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div-->
 
                 <div class="form-group text-right m-t-20">
                     <div class="col-xs-12">
@@ -69,17 +73,22 @@
 
                 <div class="form-group m-t-30">
                     <div class="col-sm-7">
-                        <a style="color: MintCream" href="pages-recoverpw.html" class="text-muted"><i class="fa fa-lock m-r-5"></i> Forgot your
-                            password?</a>
+                        <a style="color: MintCream" href="pages-recoverpw.html" class="text-muted">
+                    <%loginError.forEach(function(e){ %>
+                    <%=e%>
+                    <%})%></a>
                     </div>
+
+                    <div class="col-sm-12">
+                    </div>
+
                     <div class="col-sm-5 text-right">
-                        <a href="pages-register.html" class="text-muted" style="color: MintCream">Create an account</a>
+                        <a href="/login/new" class="text-muted" style="color: MintCream">Create an account</a>
                     </div>
                 </div>
             </form>
         </div>
-
-        
+            
     	<script>
             var resizefunc = [];
         </script>
