--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
 
      <body class="login">
         
-        <video src="/images/login.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
+        <video src="/images/login2.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
         
         </video>
         
