--- a/views/howto.ejs
+++ b/views/howto.ejs
@@ -18,23 +18,7 @@
                 <!--<div class="row" style="background-image:url('/images/login.jpg'); backgorund-size: cover;margin-bottom:20px">-->
                 <!--    아아아아아아-->
                 <!--</div>-->
-                <div class="row" style="margin-bottom:20px">
-                   
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-6">
-                            
-                        <form role="search" class="form-inline">
-                                    
-                             <input type="text" class="form-control" placeholder="Search" style="width:90%;background-color:white; line-height:40px;height:40px;">
-                             <a href=""><i class="fa fa-search"></i></a>
-                                        
-                        </form>
-                    </div>            
-                    <div class="col-lg-3"></div>            
-                           
-                    
-                </div>
-                
+                여기다가 이용방법 영상을 넣고싶
                 <!-- end row -->
 
                 
@@ -48,130 +32,6 @@
                 
                 
                 
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="card-box">
-                            <h4 class="text-dark  header-title m-t-0">최근 업로드</h4>
-                            <p class="text-muted m-b-25 font-13">
-                                
-                            </p>
-
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>제목</th>
-                                        <th>작성자</th>
-                                        <th>내용</th>
-                                        <th>날짜</th>
-                                        <th>상태</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Minton Admin v1</td>
-                                            <td>01/01/2016</td>
-                                            <td>26/04/2016</td>
-                                            <td>Coderthemes</td>
-                                            <td><span class="label label-info">Released</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Minton Frontend v1</td>
-                                            <td>01/01/2016</td>
-                                            <td>26/04/2016</td>
-                                            <td>Minton admin</td>
-                                            <td><span class="label label-success">Released</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Minton Admin v1.1</td>
-                                            <td>01/05/2016</td>
-                                            <td>10/05/2016</td>
-                                            <td>Coderthemes</td>
-                                            <td><span class="label label-pink">Pending</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>Minton Frontend v1.1</td>
-                                            <td>01/01/2016</td>
-                                            <td>31/05/2016</td>
-                                            <td>Minton admin</td>
-                                            <td><span class="label label-purple">Work in Progress</span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>Minton Admin v1.3</td>
-                                            <td>01/01/2016</td>
-                                            <td>31/05/2016</td>
-                                            <td>Coderthemes</td>
-                                            <td><span class="label label-warning">Coming soon</span></td>
-                                        </tr>
-
-                                        <tr>
-                                            <td>6</td>
-                                            <td>Minton Admin v1.3</td>
-                                            <td>01/01/2016</td>
-                                            <td>31/05/2016</td>
-                                            <td>Minton admin</td>
-                                            <td><span class="label label-warning">Coming soon</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>6</td>
-                                            <td>Minton Admin v1.3</td>
-                                            <td>01/01/2016</td>
-                                            <td>31/05/2016</td>
-                                            <td>Minton admin</td>
-                                            <td><span class="label label-warning">Coming soon</span></td>
-                                        </tr>
-
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end col -8 -->
-
-                    <div class="col-lg-4">
-                        <div class="card-box widget-user">
-                            <div>
-                                <img src="/images/avatar-1.jpg" class="img-responsive img-circle" alt="user">
-                                <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">빼면 넣을게 없다!!</h4>
-                                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
-                                    <small class="text-warning"><b>Admin</b></small>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card-box widget-user">
-                            <div>
-                                <img src="/images/avatar-1.jpg" class="img-responsive img-circle" alt="user">
-                                <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">게시판 크기 늘려도되는데</h4>
-                                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
-                                    <small class="text-success"><b>User</b></small>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card-box widget-user">
-                            <div>
-                                <img src="/images/avatar-1.jpg" class="img-responsive img-circle" alt="user">
-                                <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">그럼 또 별로 안이쁨</h4>
-                                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
-                                    <small class="text-pink"><b>Admin</b></small>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
                 <!-- end row -->
 
 
