--- a/views/med_form.ejs
+++ b/views/med_form.ejs
@@ -16,7 +16,7 @@
     <body>
 
 
-        <%include navbar%>
+        
 
 
         <!-- =======================
@@ -88,7 +88,7 @@
                                             </div>
                                            
                                             <div class="form-group">
-                                                <div class="summernote">
+                                                <div class="context">
                                                     <h6>내용입력하자</h6>
                                                     <ul>
                                                         <li>
@@ -104,6 +104,24 @@
 
                                                 </div>
                                             </div>
+                                            <div class="form-group">
+                                                <div class="summernote">
+                                                    <h6>요약 입력해주세요</h6>
+                                                    <ul>
+                                                        <li>
+                                                            Select a text to reveal the toolbar.
+                                                        </li>
+                                                        <li>
+                                                            Edit rich document on-the-fly, so elastic!
+                                                        </li>
+                                                    </ul>
+                                                    <p>
+                                                        End of air-mode area
+                                                    </p>
+
+                                                </div>
+                                            </div>
+
 
                                             <div class="btn-toolbar form-group m-b-0">
                                                 <div class="pull-right">
