푸쉬푸쉬베이베

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -127,7 +127,7 @@
                                 </ul>
                             </li>
                             <li class="has-submenu">
-                                <a href="/"><i class="md md-invert-colors-on"></i>데이터저장소-출시예정</a>
+                                <a><i class="md md-invert-colors-on"></i>데이터저장소-출시예정</a>
                             </li>
                             <li class="has-submenu">
                                 <a href="/howto"><i class="md md-class"></i>이용방법</a>
