--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -22,13 +22,13 @@ File: Menu
   min-height: 62px;
 }
 #topnav .has-submenu.active a {
-  color: #e6e6ef;
+  color: #6a76fc;
 }
 #topnav .has-submenu.active a i {
-  color: #e6e6ef;
+  color: #6a76fc;
 }
 #topnav .has-submenu.active .submenu li.active > a {
-  color: #e6e6ef;
+  color: #6a76fc;
 }
 #topnav .topbar-main {
   background-color: #6a76fc;
