--- a/public/stylesheets/pages.css
+++ b/public/stylesheets/pages.css
@@ -1089,16 +1089,16 @@ h3.timeline-title {
    Accounts
  =============*/
 
-
 .wrapper-page {
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgba(100,100,160,1);
   border-radius: 15px;
   padding: 5px 20px;
   margin: 20% auto;
   margin-top: 100px;
   max-width: 350px;
-  
+  z-index: 5;
 }
+
 .wrapper-page .form-control {
   
   height: 40px;
