--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,25 +13,26 @@
       min-height: 100%;
       width: auto;
       height: auto;
-     
+      z-index: 0;
       overflow: hidden;
     }
+    
+    .wrapper-page{
+        z-index:3;
+    }
+
 
     </style>
 </head>
 
      <body class="login">
         
-        <video src="/images/login2.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
         
-        </video>
+        <video src="/images/login2.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0"> </video>
         
         <div class="wrapper-page">
-           
             <div class="text-center">
                 <a href="/" class="logo logo-lg"><span style="color: MintCream">데이터 대리</span> </a>
-            
-                         
             </div>
             
             <form class="form-horizontal m-t-20" action="/login" method="post">
@@ -52,7 +53,7 @@
                     </div>
                 </div>
 
-                <!--div class="form-group">
+                <div class="form-group">
                     <div class="col-xs-12">
                         <div class="checkbox checkbox-primary">
                             <input id="checkbox-signup" type="checkbox" name="signup">
@@ -62,7 +63,7 @@
                         </div>
 
                     </div>
-                </div-->
+                </div>
 
                 <div class="form-group text-right m-t-20">
                     <div class="col-xs-12">
