--- a/views/med_form.ejs
+++ b/views/med_form.ejs
@@ -66,7 +66,7 @@
                                     <div class="p-20" style="padding:40px">
                                         <form role="form" class="form-horizontal" action="/med/new" method="post">
                                             <div class="form-group">
-                                                <input type="email" class="form-control" placeholder="제목" name="title">
+                                                <input type="text" class="form-control" placeholder="제목" name="title">
                                             </div>
                                             <div class="form-group">
                                                 <div class="row">
@@ -86,7 +86,9 @@
                                                         
                                                 </div><!-- input-group -->
                                             </div>
-                                           
+                                            <div class="form-group">
+                                                <input type="text" class="form-control" placeholder="요약" name="summary">
+                                            </div>
                                             <div class="form-group">
                                                 <div class="summernote">
                                                     <h6>내용입력하자</h6>
