--- a/views/my_show.ejs
+++ b/views/my_show.ejs
@@ -130,8 +130,8 @@
                                     <div class="tab-pane" id="settings">
                                         <form role="form">
                                             <div class="form-group">
-                                                <label for="FullName">Full Name</label>
-                                                <input type="text" value="John Doe" id="FullName" class="form-control">
+                                                <label for="FullName">사용자 아이디</label>
+                                                <input type="text" value="John Doe" id="FullName" class="form-control" readonly>
                                             </div>
                                             <div class="form-group">
                                                 <label for="Email">Email</label>
@@ -149,10 +149,7 @@
                                                 <label for="RePassword">Re-Password</label>
                                                 <input type="password" placeholder="6 - 15 Characters" id="RePassword" class="form-control">
                                             </div>
-                                            <div class="form-group">
-                                                <label for="AboutMe">About Me</label>
-                                                <textarea style="height: 125px" id="AboutMe" class="form-control">Loren gypsum dolor sit mate, consecrate disciplining lit, tied diam nonunion nib modernism tincidunt it Loretta dolor manga Amalia erst volute. Ur wise denim ad minim venial, quid nostrum exercise ration perambulator suspicious cortisol nil it applique ex ea commodore consequent.</textarea>
-                                            </div>
+                                            
                                             <button class="btn btn-primary waves-effect waves-light w-md" type="submit">Save</button>
                                         </form>
                                     </div>
