--- a/views/error.ejs
+++ b/views/error.ejs
@@ -23,7 +23,7 @@
     <body>
 
         
-        <video src="/images/login2.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
+        <video src="/images/error.mp4" id="video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
         
         </video>
         <!-- =======================
