--- a/views/med_form.ejs
+++ b/views/med_form.ejs
@@ -17,7 +17,7 @@
 
 
         
-
+        <%include navbar%>
 
         <!-- =======================
              ===== START PAGE ======
@@ -27,7 +27,7 @@
             <div class="container">
 
 
-
+            
                 <div class="row">
 
                     <!-- Left sidebar -->
@@ -90,39 +90,25 @@
                                                 <input type="text" class="form-control" placeholder="요약" name="summary">
                                             </div>
                                             <div class="form-group">
-                                                <div class="context">
-                                                    <h6>내용입력하자</h6>
-                                                    <ul>
-                                                        <li>
-                                                            Select a text to reveal the toolbar.
-                                                        </li>
-                                                        <li>
-                                                            Edit rich document on-the-fly, so elastic!
-                                                        </li>
-                                                    </ul>
-                                                    <p>
-                                                        End of air-mode area
-                                                    </p>
-
-                                                </div>
+                                                <textarea class="form-control" rows="15" placeholder="내용입력"></textarea>
                                             </div>
-                                            <div class="form-group">
-                                                <div class="summernote">
-                                                    <h6>요약 입력해주세요</h6>
-                                                    <ul>
-                                                        <li>
-                                                            Select a text to reveal the toolbar.
-                                                        </li>
-                                                        <li>
-                                                            Edit rich document on-the-fly, so elastic!
-                                                        </li>
-                                                    </ul>
-                                                    <p>
-                                                        End of air-mode area
-                                                    </p>
+                                            <!--<div class="form-group">-->
+                                            <!--    <div class="summernote">-->
+                                            <!--        <h6>요약 입력해주세요</h6>-->
+                                            <!--        <ul>-->
+                                            <!--            <li>-->
+                                            <!--                Select a text to reveal the toolbar.-->
+                                            <!--            </li>-->
+                                            <!--            <li>-->
+                                            <!--                Edit rich document on-the-fly, so elastic!-->
+                                            <!--            </li>-->
+                                            <!--        </ul>-->
+                                            <!--        <p>-->
+                                            <!--            End of air-mode area-->
+                                            <!--        </p>-->
 
-                                                </div>
-                                            </div>
+                                            <!--    </div>-->
+                                            <!--</div>-->
 
 
                                             <div class="btn-toolbar form-group m-b-0">
