--- a/views/med_form.ejs
+++ b/views/med_form.ejs
@@ -81,7 +81,7 @@
                                             <div class="form-group">
                                                 <div class="input-group">
                                                         
-                                                        <input type="text" class="form-control" placeholder="mm/dd/yyyy" id="datepicker-autoclose">
+                                                        <input type="text" class="form-control" placeholder="mm/dd/yyyy" id="datepicker-autoclose" name = "date">
                                                         <span class="input-group-addon bg-primary b-0 text-white"><i class="ion-calendar"></i></span>
                                                         
                                                 </div><!-- input-group -->
@@ -90,7 +90,7 @@
                                                 <input type="text" class="form-control" placeholder="요약" name="summary">
                                             </div>
                                             <div class="form-group">
-                                                <textarea class="form-control" rows="15" placeholder="내용입력"></textarea>
+                                                <textarea class="form-control" rows="15" placeholder="내용입력" name="content"></textarea>
                                             </div>
                                             <!--<div class="form-group">-->
                                             <!--    <div class="summernote">-->
